--- a/src/components/game/board/Board.css
+++ b/src/components/game/board/Board.css
@@ -1,4 +1,41 @@
 .board {
   height: 100%;
   width: 100%;
+
+  &.board-ready {
+    & .board-tile {
+      transition: transform 5s ease-in-out;
+    }
+  }
+
+  & .board-layer {
+    position: absolute;
+    top: 0;
+    height: 100%;
+    left: 0;
+    width: 100%;
+
+
+    & .board-layer-image {
+      height: 100%;
+      width: 100%;
+      object-fit: cover;
+
+      filter: greyscale(0.85);
+    }
+
+    & .board-layer-button {
+      position: absolute;
+      top: 0;
+      height: 100%;
+      left: 0;
+      width: 100%;
+
+      border: 0;
+      background: transparent;
+      font-size: 3rem;
+
+      cursor: pointer;
+    }
+  }
 }
