--- a/src/components/game/board/Board.css
+++ b/src/components/game/board/Board.css
@@ -3,39 +3,64 @@
   width: 100%;
 
   &.board-ready {
-    & .board-tile {
-      transition: transform 5s ease-in-out;
+    pointer-events: none;
+    & .board-layer {
+      pointer-events: all;
+      opacity: 1;
+      & .board-layer-image {
+        filter: grayscale(1);
+      }
     }
+  }
+  &.board-victory {
+    pointer-events: none;
+    & .board-layer {
+      pointer-events: all;
+      opacity: 1;
+    }
+  }
+  &.board-defeat {
+
   }
 
   & .board-layer {
+    pointer-events: none;
+
     position: absolute;
     top: 0;
     height: 100%;
     left: 0;
     width: 100%;
 
+    opacity: 0;
+    transition: opacity 0.25s eases-in-out;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
 
     & .board-layer-image {
       height: 100%;
       width: 100%;
       object-fit: cover;
-
-      filter: greyscale(0.85);
     }
 
-    & .board-layer-button {
+    & .board-layer-action {
       position: absolute;
-      top: 0;
-      height: 100%;
-      left: 0;
-      width: 100%;
 
-      border: 0;
-      background: transparent;
-      font-size: 3rem;
+      & .board-layer-button {
+        border: 0;
+        padding: 2rem 4rem;
+        background: black;
+        color: white;
+        font-size: 3rem;
+        font-weight: bold;
+        box-shadow: 0px 0px 25px 5px white;
+        text-transform: uppercase;
 
-      cursor: pointer;
+        cursor: pointer;
+      }
     }
   }
 }
