--- a/src/components/game/board/Board.css
+++ b/src/components/game/board/Board.css
@@ -1,22 +1,40 @@
+:root {
+  --board_border-radius: 0.5rem;
+}
+
 .board {
   height: 100%;
   width: 100%;
 
+  & .grid-tiles .grid-tiles-row .grid-tiles-row-cell {
+    overflow: visible;
+  }
+
   &.board-ready {
     pointer-events: none;
     & .board-layer {
-      pointer-events: all;
-      opacity: 1;
-      & .board-layer-image {
-        filter: grayscale(1);
+      &.board-layer__game {
+        pointer-events: none;
+      }
+      &.board-layer__mask {
+        pointer-events: all;
+        opacity: 1;
+        & .board-layer-image {
+          filter: grayscale(1);
+        }
       }
     }
   }
   &.board-victory {
     pointer-events: none;
     & .board-layer {
-      pointer-events: all;
-      opacity: 1;
+      &.board-layer__game {
+        pointer-events: none;
+      }
+      &.board-layer__mask {
+        pointer-events: none;
+        opacity: 1;
+      }
     }
   }
   &.board-defeat {
@@ -24,42 +42,52 @@
   }
 
   & .board-layer {
-    pointer-events: none;
-
     position: absolute;
     top: 0;
     height: 100%;
     left: 0;
     width: 100%;
 
-    opacity: 0;
-    transition: opacity 0.25s eases-in-out;
-
-    display: flex;
-    align-items: center;
-    justify-content: center;
-
-
-    & .board-layer-image {
-      height: 100%;
-      width: 100%;
-      object-fit: cover;
+    &.board-layer__mask {
+      pointer-events: all;
     }
+    &.board-layer__mask {
+      pointer-events: none;
+      opacity: 0;
+      transition: opacity 0.25s ease-in-out;
+      & .board-layer-image {
+        position: absolute;
+        top: 0;
+        height: 100%;
+        left: 0;
+        width: 100%;
 
-    & .board-layer-action {
-      position: absolute;
+        border-radius: var(--board_border-radius);
+        object-fit: cover;
+      }
 
-      & .board-layer-button {
-        border: 0;
-        padding: 2rem 4rem;
-        background: black;
-        color: white;
-        font-size: 3rem;
-        font-weight: bold;
-        box-shadow: 0px 0px 25px 5px white;
-        text-transform: uppercase;
+      & .board-layer-action {
+        position: absolute;
+        top: 0;
+        height: 100%;
+        left: 0;
+        width: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
 
-        cursor: pointer;
+        & .board-layer-button {
+          border: 0;
+          padding: 2rem 4rem;
+          background: black;
+          color: white;
+          font-size: 3rem;
+          font-weight: bold;
+          box-shadow: 0px 0px 25px 5px white;
+          text-transform: uppercase;
+
+          cursor: pointer;
+        }
       }
     }
   }
