add random theme + test i18n

--- a/src/components/game/Game.css
+++ b/src/components/game/Game.css
@@ -6,30 +6,16 @@
   display: flex;
   flex-direction: column;
 
+  background: var(--base_background);
+  color: var(--base_color);
+
   user-select: none;
 
-  & .game-header {
-    flex-shrink: 0;
-
-    display: flex;
-    align-items: center;
-    justify-content: center;
-
-    height: 3rem;
-
-    background: black;
-    color: grey;
-
-    font-size: 1.1rem;
-    font-weight: bold;
-  }
-
   & .game-area {
+    position: relative;
     flex-basis: 0;
     flex-grow: 1;
     overflow: hidden;
-
-    background: #112;
   }
 
   & .game-footer {
@@ -48,30 +34,5 @@
 
     font-size: 1.1rem;
     font-weight: bold;
-  }
-
-  & .game-layer {
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background: rgba(255,255,255,0.5);
-    display: flex;
-    align-items: center;
-    justify-content: center;
-
-    & .game-dialog {
-      height: 200px;
-      width: 400px;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      border-radius: 1rem;
-      font-size: 3rem;
-      background: #DDD;
-      box-shadow: 0px 0px 20px 5px black;
-    }
   }
 }
