--- a/src/components/game/GameFooterAction.css
+++ b/src/components/game/GameFooterAction.css
@@ -2,18 +2,26 @@
   min-width: 2rem;
   min-height: 2rem;
   padding: 0;
+
   border: 0;
   border-radius: 0.25rem;
-  background: grey;
+
   font-size: 1rem;
   display: flex;
   align-items: center;
   justify-content: center;
   cursor: pointer;
-  &:hover {
-    background: lightgrey;
+
+  background: var(--base_item_background);
+  color: var(--base_item_color);
+
+  &:hover:not(.selected) {
+    background: var(--base_highlight_background);
+    color: var(--base_highlight_color);
   }
+
   &.selected {
-    background: rgb(42, 128, 185);
+    background: var(--base_selected_background);
+    color: var(--base_selected_color);
   }
 }
