--- a/src/components/game/GameFooterAction.css
+++ b/src/components/game/GameFooterAction.css
@@ -16,8 +16,8 @@
   color: var(--base_item_color);
 
   &:hover:not(.selected) {
-    background: var(--base_highlight_background);
-    color: var(--base_highlight_color);
+    background: var(--base_hover_background);
+    color: var(--base_hover_color);
   }
 
   &.selected {
