--- a/src/components/common/tiles/Tile.css
+++ b/src/components/common/tiles/Tile.css
@@ -1,4 +1,4 @@
-.theme-tile {
+.tile {
   height: 200px;
   width: 320px;
 
@@ -9,14 +9,14 @@
   padding: 0;
   border: 0;
   background: none;
-  filter: grayscale(1);
+  filter: grayscale(0.5);
 
   border: 2px solid transparent;
   border-radius: 0.25rem;
   overflow: hidden;
 
   &:hover {
-    filter: grayscale(0.5);
+    filter: grayscale(0.8);
   }
 
   &.selected {
@@ -24,7 +24,7 @@
     box-shadow: 0 0 5px 0 white;
   }
 
-  & .theme-tile-image {
+  & .tile__image {
     width: 100%;
     height: 100%;
     object-fit: cover;
