--- a/src/components/common/panel/Panel.css
+++ b/src/components/common/panel/Panel.css
@@ -10,12 +10,14 @@
   border-radius: 0.5rem;
   padding : 0.5rem;
   margin: 0.5rem;
+  text-align: center;
 }
 
 /* S Screen layout */
 
 @media (min-width: 576px) {
   .panel {
+    text-align: left;
     border-radius: 0.5rem;
     padding : 1rem;
     margin: 1rem;
