--- a/src/components/common/tiles/Tile.css
+++ b/src/components/common/tiles/Tile.css
@@ -1,27 +1,18 @@
 .tile {
-  height: 200px;
-  width: 320px;
-
   position: relative;
 
   cursor: pointer;
 
-  padding: 0;
-  border: 0;
-  background: none;
-  filter: grayscale(0.5);
-
+  box-sizing: border-box;
   border: 2px solid transparent;
-  border-radius: 0.25rem;
-  overflow: hidden;
 
   &:hover {
-    filter: grayscale(0.8);
+    filter: sepia(0.5);
   }
 
   &.selected {
     filter: none;
-    box-shadow: 0 0 5px 0 white;
+    border: 2px solid var(--base_selected_background);
   }
 
   & .tile__image {
@@ -29,4 +20,49 @@
     height: 100%;
     object-fit: cover;
   }
+
+  padding: 0;
+  background: none;
+  filter: grayscale(0.5);
+
+  border-radius: 0.25rem;
+  overflow: hidden;
+
+  /* XS Screen layout */
+
+  width: 45%;
+  aspect-ratio: 1.5;
+  max-width: 250px;
+}
+
+/* S Screen layout */
+
+@media (min-width: 576px) {
+  .tile {
+
+  }
+}
+
+/* M Screen layout */
+
+@media (min-width: 768px) {
+  .tile {
+
+  }
+}
+
+/* L Screen layout */
+
+@media (min-width: 992px) {
+}
+
+/* XL Screen layout */
+
+@media (min-width: 1200px) {
+}
+
+/* XXL Screen layout */
+
+@media (min-width: 1400px) {
+
 }
