--- a/src/components/game/board/tile/BoardTileInner.css
+++ b/src/components/game/board/tile/BoardTileInner.css
@@ -1,4 +1,4 @@
-.tile {
+.board-tile-inner {
   width: 100%;
   height: 100%;
   padding: 0;
@@ -10,20 +10,8 @@
 
   cursor: pointer;
 
-  & .tile-image {
+  & .board-tile-image {
     object-fit: cover;
     pointer-events: none;
-  }
-
-  & .tile-layer {
-    position: absolute;
-    top: -1px;
-    left: -1px;
-    bottom: -1px;
-    right: -1px;
-
-    cursor: pointer;
-    border: 2px solid black;
-    border-radius: 5%;
   }
 }
