--- a/docs/base.css
+++ b/docs/base.css
@@ -8,32 +8,11 @@ body,
   height: 100%;
   overflow: hidden;
   position: relative;
+  background: black;
 
   font-family: 'Roboto', sans-serif;
 
   user-select: none;
-}
-
-.main-layer {
-  position: absolute;
-  top: 0;
-  left: 0;
-  height: 100%;
-  width: 100%;
-}
-.main-layer-background {
-  background: #232323;
-  background-size: cover;
-}
-
-.main-layer-copyright {
-  position: absolute;
-  bottom: 0;
-  right: 0;
-  color: darkgrey;
-  margin: 1rem;
-  fontStyle: italic;
-  fontSize: 0.75rem;
 }
 
 h1, h2, h3, h4, h5, h6 {
