--- a/src/components/game/Game.css
+++ b/src/components/game/Game.css
@@ -6,7 +6,7 @@
   display: flex;
   flex-direction: column;
 
-  background: var(--base_background);
+  background: var(--base_background_1);
   color: var(--base_color);
 
   user-select: none;
